--- a/information.html
+++ b/information.html
@@ -10,7 +10,6 @@
 <body>
     <header>
         <div class="container">
-            <h1>MY PERSONAL INFORMATION</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -23,7 +22,7 @@
 
     <section class="info-section">
         <div class="container">
-            <h2>About Me</h2>
+            <h2>My Personal Information</h2>
             <p><strong>Name:</strong> Jam Riah B. Manza</p>
             <p><strong>Age:</strong> 20 years old</p>
             <p><strong>Year Level:</strong> 3rd year</p>
@@ -39,10 +38,6 @@
     
     <footer>
         <div class="footer-container">
-            <div class="contact-info">
-                <p><strong>Call:</strong> +639451451405</p>
-                <p><strong>Email:</strong> jamriahmanza12@gmail.com</p>
-            </div>
             <div class="social-icons">
                 <a href="https://facebook.com" target="_blank" aria-label="Facebook">
                     <i class="fab fa-facebook-f"></i>
