--- a/explore.html
+++ b/explore.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PERSONAL INFORMATION</title>
-    <link rel="stylesheet" href="information.css">
+    <title>STORY OF MY LIFE</title>
+    <link rel="stylesheet" href="explore.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -25,17 +25,41 @@
         </div>
     </header>
 
-    <section class="info-section">
-        <div class="container">
-            <h2>My Personal Information</h2>
-            <p><strong>Name:</strong> Jam Riah Bacat Manza</p>
-            <p><strong>Birthday:</strong> July 12, 2004</p>
-            <p><strong>Age:</strong> 20 years old</p>
-            <p><strong>Birthplace:</strong> Vicente Sotto Memorial Medical Center</p>
-        </div>
-    </section>
-    
-    <a href="explore.html" class="back-button">Back to Home</a>
+
+<div class="latest">Latest</div>
+<div class="grid">
+  <div class="card">
+    <img src="/images/" alt="About Me">
+    <div class="card-content">
+      <div class="category">Content 1</div>
+      <div class="title">
+        <a href="information.html">Personal Info</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="/background/scene2" alt="Story">
+    <div class="card-content">
+      <div class="category">Content 2</div>
+      <div class="title">
+        <a href="story.html">My Story</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="/background/scene3" alt="Etc">
+    <div class="card-content">
+      <div class="category">Content 3</div>
+      <div class="title">
+        <a href="#">Etc</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<a href="index.html" class="back-button">Back to Home</a>
 
     <footer>
         <div class="footer-container">
