--- a/index.html
+++ b/index.html
@@ -3,43 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>STORY OF MY LIFE</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+
     <header>
-        <div class="container">
+        <div class="nav">
+            <div class="logo">SOML</div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#" class="login-btn">Log in</a></li>
                 </ul>
-                <a href="login.html" class="login-btn">
-                    <img src="/images/login.jpg" alt="Login">
-                </a>
             </nav>
         </div>
     </header>
 
-    <section class="main">
+    <section class="hero">
+        <div class="overlay"></div>
         <div class="content">
-            <div class="profile">
-                <img src="/images/profile.jpg" alt="Jam Riah Manza">
-            </div>
-            <div class="about">
-                <h2>Hello,</h2>
-                <p class="subtitle">a bit about me:</p>
-                <div class="buttons">
-                    <a href="information.html" class="btn red">MY PERSONAL INFORMATION</a>
-                    <a href="story.html" class="btn blue">MY STORY</a>
-                    <a href="#" class="btn yellow">ETC</a>
-                </div>
-                <p class="description">
-                    "Get to know me — my story, journey, passions, and what drives me forward."
-                </p>
-            </div>
+            <h1><i>Story Of My Life</i></h1>
+            <h5>A journey of growth, dreams, and determination.</h5>
+            <a href="explore.html" class="btn">Explore Here</a>
         </div>
     </section>
 
