--- a/story.html
+++ b/story.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Story</title>
+    <title>MY STORY</title>
     <link rel="stylesheet" href="story.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+
     <header>
-        <div class="container">
+        <div class="nav">
+            <div class="logo">SOML</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#" class="login-btn">Log in</a></li>
                 </ul>
             </nav>
         </div>
@@ -22,15 +27,13 @@
 
     <section class="info-section">
         <div class="container">
-            <h2>STORY OF MY LIFE</h2>
-            <p><strong>Name:</strong> Jam Riah B. Manza</p>
+            <h2></h2>
+            <h1>To be continued...</h1>
         </div>
     </section>
-
- <div class="back-button">
-        <a href="index.html" class="btn back">← Back to Home</a>
-    </div>
     
+    <a href="explore.html" class="back-button">Back to Home</a>
+
     <footer>
         <div class="footer-container">
             <div class="social-icons">
@@ -45,7 +48,7 @@
                 </a>
             </div>
             <p class="copyright">© 2025 All rights reserved.</p>
-          </div>
+        </div>
     </footer>
 
 </body>
