--- a/index.html
+++ b/index.html
@@ -42,72 +42,79 @@
     <div class="overlay"></div>
     <div class="content">
         <h1><i>Story Of My Life</i></h1>
-        <h5>A journey of growth, dreams, and determination.</h5>
+        <h5>2024 Journey</h5>
         <a href="#explore" class="btn">Explore Here</a>
     </div>
 </section>
 
-<section id="about" class="section about">
-    <h2>About Me</h2>
-    <p>...</p>
+<section id="about" class="about">
+    <div class="about-content-container">
+        <div class="about-image">
+            <img src="/images/profile" alt="About Us Image">
+        </div>
+        <div class="about-text">
+            <h1>ABOUT ME</h1>
+            <p>
+                I am Jam Riah B. Manza, 20 years old, a 3rd-year Computer Engineering student. Outside of my studies, I enjoy crocheting, which helps me develop patience, creativity, and attention to detail. As an only child, I have grown to be independent and adaptable, traits that have shaped both my personal and academic life. My curiosity and love for learning push me to explore new innovations and seek opportunities for growth, both personally and professionally.
+            </p>
+        </div>
+    </div>
 </section>
 
 <section id="explore" class="section explore">
     <h1>Explore My Journey</h1>
     <h2 class="latest">Latest</h2>
     <div class="grid page-1">
-        <!-- Page 1 Polaroids -->
         <div class="polaroid">
             <img src="/images/1January" alt="January">
-            <div class="caption">This is January.</div>
+            <div class="caption">January.</div>
         </div>
         <div class="polaroid">
             <img src="/images/2February" alt="February">
-            <div class="caption">This is February.</div>
+            <div class="caption">February.</div>
         </div>
         <div class="polaroid">
             <img src="/images/3March" alt="March">
-            <div class="caption">This is March.</div>
+            <div class="caption">March.</div>
         </div>
         <div class="polaroid">
             <img src="/images/4April" alt="April">
-            <div class="caption">This is April.</div>
+            <div class="caption">April.</div>
         </div>
         <div class="polaroid">
             <img src="/images/5May" alt="May">
-            <div class="caption">This is May.</div>
+            <div class="caption">May.</div>
         </div>
         <div class="polaroid">
             <img src="/images/6June" alt="June">
-            <div class="caption">This is June.</div>
+            <div class="caption">June.</div>
         </div>
     </div>
 
     <div class="grid page-2">
-        <!-- Page 2 Polaroids -->
         <div class="polaroid">
             <img src="/images/7July" alt="July">
-            <div class="caption">This is July.</div>
+            <div class="caption">July.</div>
         </div>
         <div class="polaroid">
             <img src="/images/8August" alt="August">
-            <div class="caption">This is August.</div>
+            <div class="caption">August.</div>
         </div>
         <div class="polaroid">
             <img src="/images/9September" alt="September">
-            <div class="caption">This is September.</div>
+            <div class="caption">September.</div>
         </div>
         <div class="polaroid">
             <img src="/images/10October" alt="October">
-            <div class="caption">This is October.</div>
+            <div class="caption">October.</div>
         </div>
         <div class="polaroid">
             <img src="/images/11November" alt="November">
-            <div class="caption">This is November.</div>
+            <div class="caption">November.</div>
         </div>
         <div class="polaroid">
             <img src="/images/12December" alt="December">
-            <div class="caption">This is December.</div>
+            <div class="caption">December.</div>
         </div>
     </div>
 
@@ -133,38 +140,49 @@
 </script>
 
 <section id="contact" class="section contact">
-    <div class="contact-form">
-        <h2>Contact Us</h2>
-        <form id="contactForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-
-            <button type="submit">Send</button>
-        </form>
-        
+  <h1>Contact Us</h1>
+  <div class="container">
+    <div class="info-box">
+      <div class="info-item">
+        <a href="https://www.facebook.com/jamriah.manza" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-facebook-square"></i>
+          <p class="title">Facebook</p>
+        </a>
+      </div>
+      <div class="info-item">
+        <a href="https://www.instagram.com/_strwbrryjamx?igsh=cWNsd2VreDBmcW85" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-instagram"></i>
+          <p class="title">Instagram</p>
+        </a>
+      </div>
+     <div class="info-item">
+  <a href="https://www.twitter.com/your-twitter-profile" target="_blank" rel="noopener noreferrer">
+    <i class="custom-x-icon">X</i>
+    <p class="title">X</p>
+  </a>
+</div>
+      <div class="info-item">
+        <a href="mailto:jamriahmanza12@gmail.com">
+          <i class="fas fa-envelope"></i>
+          <p class="title">Email</p>
+        </a>
+      </div>
+    </div>
+    <div class="form-box">
+      <h2>Contact Us</h2>
+      <form action="#">
+        <input type="text" placeholder="Enter your Name" required>
+        <input type="email" placeholder="Enter a valid email address" required>
+        <textarea placeholder="Your message here..." required></textarea>
+        <button type="submit">SUBMIT</button>
+      </form>
+    </div>
+  </div>
         <p class="confirmation-message" id="confirmationMessage">Thank you! Your message has been sent.</p>
     </div>
 </section>
 
     <footer>
-        <div class="footer-container">
-            <div class="social-icons">
-                <a href="https://facebook.com" target="_blank" aria-label="Facebook">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="https://twitter.com" target="_blank" aria-label="Twitter">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="https://instagram.com" target="_blank" aria-label="Instagram">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </div>
             <p class="copyright">© 2025 All rights reserved.</p>
         </div>
     </footer>
