--- a/index.html
+++ b/index.html
@@ -10,32 +10,25 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="nav">
-            <div class="logo">SOML</div>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
-                    <li><a href="login.html" class="login-btn">Log in</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    
 <header>
-    <div class="nav">
-        <div class="logo">SOML</div>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact Us</a></li>
-                <li><a href="login.html" class="login-btn">Log in</a></li>
-            </ul>
-        </nav>
-    </div>
+<div class="nav">
+  <div class="logo">SOML</div>
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li class="dropdown">
+        <a href="#explore">Explore <span class="arrow">▼</span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#grid page-1">Page 1</a></li>
+          <li><a href="#grid page-2">Page 2</a></li>
+        </ul>
+      </li>
+      <li><a href="#contact">Contact Us</a></li>
+      <li><a href="login.html" class="login-btn">Log in</a></li>
+    </ul>
+  </nav>
+</div>
 </header>
 
 <section id="home" class="hero">
@@ -61,7 +54,7 @@
     </div>
 </section>
 
-<section id="explore" class="section explore">
+<section id="explore" class="explore">
     <h1>Explore My Journey</h1>
     <h2 class="latest">Latest</h2>
     <div class="grid page-1">
