--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="logo"><strong>JRM</strong> Blog</div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li class="dropdown">
                     <a href="#" id="categories-btn">Categories <span class="arrow">▼</span></a>
                     <ul class="dropdown-menu" id="dropdown-menu">
@@ -176,33 +176,6 @@
 
 <section id="contact" class="section contact">
   <h1>Contact Us</h1>
-  <div class="container">
-    <div class="info-box">
-      <div class="info-item">
-        <a href="https://www.facebook.com/jamriah.manza" target="_blank" rel="noopener noreferrer">
-          <i class="fab fa-facebook-square"></i>
-          <p class="title">Facebook</p>
-        </a>
-      </div>
-      <div class="info-item">
-        <a href="https://www.instagram.com/_strwbrryjamx?igsh=cWNsd2VreDBmcW85" target="_blank" rel="noopener noreferrer">
-          <i class="fab fa-instagram"></i>
-          <p class="title">Instagram</p>
-        </a>
-      </div>
-     <div class="info-item">
-  <a href="https://www.twitter.com/your-twitter-profile" target="_blank" rel="noopener noreferrer">
-    <i class="custom-x-icon">X</i>
-    <p class="title">X</p>
-  </a>
-</div>
-      <div class="info-item">
-        <a href="mailto:jamriahmanza12@gmail.com">
-          <i class="fas fa-envelope"></i>
-          <p class="title">Email</p>
-        </a>
-      </div>
-    </div>
     <div class="form-box">
       <h2>Contact Us</h2>
       <form action="#">
