--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="/images/icon" href="icon">
     <title>STORY OF MY LIFE</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,8 +25,11 @@
         </a>
     </div>
     
-    <div class="left-section">
-        <div class="logo"><strong>JRM</strong> Blog</div>
+  <div class="left-section">
+    <div class="logo">
+        <img src="/images/logo" alt="My Website Logo" class="logo-img">
+        <strong>Blog</strong>
+    </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
