--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            background: linear-gradient(135deg, #CAC9CD, #3E3B39);
+            background: linear-gradient(135deg, #FAE8ED, #FDD5DF);
             background-size: cover;
             display: flex;
             align-items: center;
@@ -28,7 +28,7 @@
         }
         .left-section {
             flex: 1;
-            background: linear-gradient(135deg, #F8F8FF, #100C07);
+            background: linear-gradient(120deg, #FAE8ED, #FDD5DF, #FFE6EE, #FFA2B9);
             color: black;
             padding: 30px;
             display: flex;
