--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            background: linear-gradient(135deg, #CAC9CD, #3E3B39);
+            background: linear-gradient(135deg, #FAE8ED, #FDD5DF);
             background-size: cover;
             display: flex;
             align-items: center;
@@ -66,7 +66,7 @@
         .login-box {
             flex: 1;
             padding: 30px;
-            background: linear-gradient(135deg, #F8F8FF, #100C07);
+            background: linear-gradient(120deg, #FAE8ED, #FDD5DF, #FFE6EE, #FFA2B9);
             display: flex;
             flex-direction: column;
             justify-content: center;
