--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="/images/icon" href="icon">
+    <link rel="icon" type="/images/icon.png" href="icon.png">
     <title>STORY OF MY LIFE</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -76,7 +76,7 @@
 <section id="home" class="hero">
     <div class="overlay"></div>
     <div class="content">
-        <h1><i>Story Of My Life</i></h1>
+        <h1><i>Story Of <span>My Life</span></i></h1>
         <h5>2024 Journey</h5>
         <a href="#explore" class="btn">Explore Here</a>
     </div>
@@ -88,7 +88,7 @@
             <img src="/images/profile" alt="About Us Image">
         </div>
         <div class="about-text">
-            <h1>ABOUT ME</h1>
+            <h1><span>ABOUT</span> ME</h1>
             <p> I am Jam Riah B. Manza, 20 years old, a 3rd-year Computer Engineering student. Outside of my studies, I enjoy crocheting, which helps me develop patience, creativity, and attention to detail. As an only child, I have grown to be independent and adaptable, traits that have shaped both my personal and academic life. My curiosity and love for learning push me to explore new innovations and seek opportunities for growth, both personally and professionally.</p>
         </div>
     </div>
@@ -193,7 +193,7 @@
     </div>
     </div>
     
-<h1 class="bottom-title">Two Thousand Twenty-Four</h1>
+<h1 class="bottom-title">Two Thousand <span>Twenty-Four</span></h1>
 
     <script>
       function flipCard(card) {
