--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <img src="/images/7July" alt="July">
       <div class="caption">July</div>
       <div class="back-caption">
-      <p id="borderimg1">Birthday celebration with my cousin's mother, as we share the same birthday.</p>
+      <p id="borderimg1">Double birthday celebration, with my cousin's mother.</p>
       </div>
     </div>
 
