--- a/index.html
+++ b/index.html
@@ -99,18 +99,20 @@
 <section id="explore" class="explore">
   <div class="collage">
   <div class="polaroid" onclick="flipCard(this)">
-    <img src="/images/1January" alt="January">
+    <img class="front-photo" src="/images/January1" alt="January">
+    <img class="back-photo" src="/images/January2" alt="January" />
     <div class="caption">January</div>
     <div class="back-caption">
       <p id="borderimg1">Sinulog Celebration.</p>
     </div>
-        <div class="reactions">
+    <div class="reactions">
       <i class="fa-solid fa-heart"></i>
     </div>
   </div>
 
       <div class="polaroid" onclick="flipCard(this)">
-        <img src="/images/2February" alt="February">
+          <img class="front-photo" src="/images/February1" alt="February">
+  <img class="back-photo" src="/images/February2" alt="February" />
         <div class="caption">February</div>
         <div class="back-caption">
         <p id="borderimg1">Valentine's Day.</p>
