--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
       </div>
 
       <div class="polaroid" onclick="flipCard(this)">
-        <img src="/images/3March" alt="March">
+          <img class="front-photo" src="/images/March1" alt="March">
+  <img class="back-photo" src="/images/March2" alt="March" />
         <div class="caption">March</div>
         <div class="back-caption">
         <p id="borderimg1">P.E Practice.</p>
@@ -134,7 +135,8 @@
       </div>
 
           <div class="polaroid" onclick="flipCard(this)">
-      <img src="/images/4April" alt="April">
+        <img class="front-photo" src="/images/April1" alt="April">
+  <img class="back-photo" src="/images/April2" alt="April" />
       <div class="caption">April</div>
       <div class="back-caption">
       <p id="borderimg1">Angara Unity Cup 2024, Carmen Days.</p>
