--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
     </div>
 
     <div class="polaroid" onclick="flipCard(this)">
-      <img src="/images/5May" alt="May">
+        <img class="front-photo" src="/images/May1" alt="May">
+  <img class="back-photo" src="/images/May2" alt="May" />
       <div class="caption">May</div>
       <div class="back-caption">
       <p id="borderimg1">Flores De Mayo.</p>
@@ -158,7 +159,8 @@
     </div>
 
     <div class="polaroid" onclick="flipCard(this)">
-      <img src="/images/6June" alt="June">
+        <img class="front-photo" src="/images/June1" alt="June">
+  <img class="back-photo" src="/images/June2" alt="June" />
       <div class="caption">June</div>
       <div class="back-caption">
       <p id="borderimg1">Laag-laag.</p>
