--- a/index.html
+++ b/index.html
@@ -171,10 +171,11 @@
     </div>
     
         <div class="polaroid" onclick="flipCard(this)">
-      <img src="/images/7July" alt="July">
+        <img class="front-photo" src="/images/July1" alt="July2">
+  <img class="back-photo" src="/images/2February" alt="July" />
       <div class="caption">July</div>
       <div class="back-caption">
-      <p id="borderimg1">Double birthday celebration, with my cousin's mother.</p>
+      <p id="borderimg1">Double birthday celebration, birthday x fiesta</p>
       </div>
          <div class="reactions">
      <i class="fa-solid fa-heart"></i>
@@ -182,7 +183,8 @@
     </div>
 
     <div class="polaroid" onclick="flipCard(this)">
-      <img src="/images/8August" alt="August">
+        <img class="front-photo" src="/images/August1" alt="August">
+  <img class="back-photo" src="/images/August2" alt="August" />
       <div class="caption">August</div>
       <div class="back-caption">
       <p id="borderimg1">10k Roses.</p>
