--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
     </div>
 
     <div class="polaroid" onclick="flipCard(this)">
-      <img src="/images/9September" alt="September">
+        <img class="front-photo" src="/images/September1" alt="September">
+  <img class="back-photo" src="/images/September2" alt="September" />
       <div class="caption">September</div>
       <div class="back-caption">
       <p id="borderimg1">My comfort zone.</p>
@@ -206,7 +207,8 @@
     </div>
     
         <div class="polaroid" onclick="flipCard(this)">
-      <img src="/images/10October" alt="October">
+        <img class="front-photo" src="/images/October1" alt="October">
+  <img class="back-photo" src="/images/October2" alt="October" />
       <div class="caption">October</div>
       <div class="back-caption">
         <p id="borderimg1">Visiting my home town (camotes).</p>
@@ -217,7 +219,8 @@
     </div>
 
     <div class="polaroid" onclick="flipCard(this)">
-      <img src="/images/11November" alt="November">
+        <img class="front-photo" src="/images/November1" alt="November">
+  <img class="back-photo" src="/images/November2" alt="November" />
       <div class="caption">November</div>
       <div class="back-caption">
         <p id="borderimg1">Cousin's Trip.</p>
@@ -228,10 +231,11 @@
     </div>
 
     <div class="polaroid" onclick="flipCard(this)">
-      <img src="/images/12December" alt="December">
+        <img class="front-photo" src="/images/December1" alt="December">
+  <img class="back-photo" src="/images/December2" alt="December" />
       <div class="caption">December</div>
       <div class="back-caption">
-        <p id="borderimg1">Mama's Birthday.</p>
+        <p id="borderimg1">Mama's Birthday & exchanging of gifts.</p>
       </div>
          <div class="reactions">
      <i class="fa-solid fa-heart"></i>
