--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 <section id="explore" class="explore">
   <div class="collage">
   <div class="polaroid" onclick="flipCard(this)">
-    <img class="front-photo" src="/images/January1" alt="January">
-    <img class="back-photo" src="/images/January2" alt="January" />
+        <img class="front-photo" src="/images/January1" alt="January">
+   <img class="back-photo" src="/images/January2" alt="January" />
     <div class="caption">January</div>
     <div class="back-caption">
       <p id="borderimg1">Sinulog Celebration.</p>
@@ -166,19 +166,19 @@
       <p id="borderimg1">Laag-laag.</p>
       </div>
          <div class="reactions">
-     <i class="fa-solid fa-question"></i>
+     <i class="fa-solid fa-thumbs-up"></i>
    </div>
     </div>
     
         <div class="polaroid" onclick="flipCard(this)">
         <img class="front-photo" src="/images/July1" alt="July2">
-  <img class="back-photo" src="/images/2February" alt="July" />
+  <img class="back-photo" src="/images/July2" alt="July" />
       <div class="caption">July</div>
       <div class="back-caption">
-      <p id="borderimg1">Double birthday celebration, birthday x fiesta</p>
+      <p id="borderimg1">Double Birthday Celebration x Fiesta.</p>
       </div>
          <div class="reactions">
-     <i class="fa-solid fa-heart"></i>
+     <i class="fa-solid fa-face-laugh"></i>
    </div>
     </div>
 
@@ -190,7 +190,7 @@
       <p id="borderimg1">10k Roses.</p>
       </div>
          <div class="reactions">
-     <i class="fa-solid fa-thumbs-up"></i>
+     <i class="fa-solid fa-question"></i>
    </div>
     </div>
 
@@ -202,7 +202,7 @@
       <p id="borderimg1">My comfort zone.</p>
       </div>
          <div class="reactions">
-     <i class="fa-solid fa-question"></i>
+     <i class="fa-solid fa-thumbs-up"></i>
    </div>
     </div>
     
@@ -223,7 +223,7 @@
   <img class="back-photo" src="/images/November2" alt="November" />
       <div class="caption">November</div>
       <div class="back-caption">
-        <p id="borderimg1">Cousin's Trip.</p>
+        <p id="borderimg1">Cousin's Trip x Intrams</p>
       </div>
          <div class="reactions">
      <i class="fa-solid fa-face-laugh"></i>
