--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <img src="/images/logo" alt="My Website Logo" class="logo-img">
         <strong>LifeLog</strong>
     </div>
+    
+    <div class="hamburger" onclick="toggleMenu()">
+  <i class="fas fa-bars"></i>
+</div>
+    
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
