--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <i class="fas fa-bars"></i>
 </div>
     
+        <div class="nav-links">
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -49,7 +50,14 @@
                 </li>
             </ul>
         </nav>
+        </
     </div>
+    
+    <script>
+      function toggleMenu() {
+    document.querySelector(".nav-links").classList.toggle("active");
+}
+    </script>
 
     <div class="right-section">
         <div class="search-bar">
