--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JRM LifeLog</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -90,8 +91,8 @@
 <section id="home" class="hero">
     <div class="overlay"></div>
     <div class="content">
-        <h1><i>Moments &<span> Memories</span></i></h1>
-        <h5>2024 Journey</h5>
+        <h1><i><span>Moments</span> & <span>Memories</span></i></h1>
+        <h5>Snapshots of 2024</h5>
         <a href="#explore" class="btn">Explore Here</a>
     </div>
 </section>
@@ -111,7 +112,9 @@
 
 <section id="explore" class="explore">
   <div class="collage">
+  <div class="row">
   <div class="polaroid" onclick="flipCard(this)">
+    <i class="fa-solid fa-"></i>
         <img class="front-photo" src="/images/January1" alt="January">
    <img class="back-photo" src="/images/January2" alt="January" />
     <div class="caption">January</div>
@@ -158,7 +161,9 @@
      <i class="fa-solid fa-face-laugh"></i>
    </div>
     </div>
+    </div>
 
+<div class="row">
     <div class="polaroid" onclick="flipCard(this)">
         <img class="front-photo" src="/images/May1" alt="May">
   <img class="back-photo" src="/images/May2" alt="May" />
@@ -206,7 +211,9 @@
      <i class="fa-solid fa-question"></i>
    </div>
     </div>
+    </div>
 
+<div class="row">
     <div class="polaroid" onclick="flipCard(this)">
         <img class="front-photo" src="/images/September1" alt="September">
   <img class="back-photo" src="/images/September2" alt="September" />
@@ -253,6 +260,7 @@
          <div class="reactions">
      <i class="fa-solid fa-heart"></i>
    </div>
+    </div>
     </div>
     </div>
     
