--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   <img class="back-photo" src="/images/November2" alt="November" />
       <div class="caption">November</div>
       <div class="back-caption">
-        <p id="borderimg1">Cousin's Trip x Intrams</p>
+        <p id="borderimg1">Cousin's Bonding x Intrams</p>
       </div>
          <div class="reactions">
      <i class="fa-solid fa-face-laugh"></i>
